--- a/.github/workflows/.ckanext-sitesearch.yml
+++ b/.github/workflows/.ckanext-sitesearch.yml
@@ -47,4 +47,6 @@ jobs:
 
         ckan -c test.ini db init
     - name: Run tests
-      run: pytest --ckan-ini=test.ini --disable-warnings ckanext/sitesearch
+      run: |
+        cd ckanext-sitesearch
+        pytest --ckan-ini=test.ini --disable-warnings ckanext/sitesearch
