--- a/.github/workflows/.ckanext-xloader.yml
+++ b/.github/workflows/.ckanext-xloader.yml
@@ -50,4 +50,6 @@ jobs:
 
         ckan -c test.ini db init
     - name: Run tests
-      run: pytest --ckan-ini=test.ini --disable-warnings ckanext/xloader
+      run: |
+        cd ckanext-xloader
+        pytest --ckan-ini=test.ini --disable-warnings ckanext/xloader
