--- a/.github/workflows/.ckanext-sitesearch.yml
+++ b/.github/workflows/.ckanext-sitesearch.yml
@@ -3,7 +3,7 @@ on:
   push:
   pull_request:
   schedule:
-    - cron: '*/15 * * * *'
+    - cron: '0 0 * * 2,4'
 jobs:
   test:
     runs-on: ubuntu-latest
