Fix typos and requirements

--- a/.github/workflows/ckanext-geoview.yml
+++ b/.github/workflows/ckanext-geoview.yml
@@ -37,7 +37,7 @@ jobs:
     - name: Install requirements
       run: |
         cd ckanext-geoview
-        pip install -r requirements.txt
+        pip install -r dev-requirements.txt
         pip install -e .
     - name: Setup extension
       run: |
