--- a/.github/workflows/ckanext-saml2auth.yml
+++ b/.github/workflows/ckanext-saml2auth.yml
@@ -34,6 +34,8 @@ jobs:
     - name: Clone extension
       run: |
         git clone https://github.com/keitaroinc/ckanext-saml2auth.git
+        apt install xmlsec1
+        apt install rustc cargo
     - name: Install requirements
       run: |
         cd ckanext-saml2auth
